test/spec_vectors/table/ok/module_13.wat
(module (table 0 funcref (ref.null func)))