test/spec_vectors/table/fail/module_29.wat
(module (table 0 (ref func)))